--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "keeper-part-3-starting",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "homepage": "http://kendrickbry.github.io/testing",
+  "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.4.3",
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "typescript": "3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
