--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "keeper-part-3-starting",
+  "name": "keeper-part-3-completed",
   "version": "1.0.0",
-  "homepage": "http://kendrickbry.github.io/testing",
-  "private": true,
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "-": "0.0.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "^3.4.3",
-    "save-dev": "0.0.1-security"
+    "react-scripts": "^3.4.3"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
     "typescript": "3.3.3"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
