--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "keeper-part-3-completed",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
   "main": "src/index.js",
+  "homepage": "http://kendrickbry.github.io/testing",
   "dependencies": {
+    "-": "0.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "gh-pages": "^3.1.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
     "typescript": "3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
