--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keeper-part-3-completed",
+  "name": "daten",
   "version": "1.0.0",
   "main": "src/index.js",
   "homepage": "http://kendrickbry.github.io/testing",
